--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "值乎"
-description: "分享有价值的信息"
+title: "智乎"
+description: "智分享有价值的信息"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
